@@ -1,27 +1,81 @@
 package com.island.engine;
 
 import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Comparator;
+import java.util.EnumMap;
 import java.util.List;
+import java.util.Map;
+import java.util.Queue;
+import java.util.concurrent.Callable;
+import java.util.concurrent.ConcurrentLinkedQueue;
+import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
+import java.util.concurrent.RejectedExecutionException;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * Orchestrates the simulation ticks.
+ * Generic engine component that schedules and executes simulation tasks.
+ *
+ * @param <T> The base type of entities in the simulation world.
  */
-public class GameLoop {
-    private final List<Runnable> recurringTasks = new ArrayList<>();
+public class GameLoop<T extends Mortal> {
+    private static final Logger log = LoggerFactory.getLogger(GameLoop.class);
+    
+    private final List<ScheduledTask> recurringTasks = new ArrayList<>();
+    private final Queue<ScheduledTask> pendingTasks = new ConcurrentLinkedQueue<>();
     private final long tickDurationMs;
     private final ExecutorService taskExecutor;
     private volatile boolean running = false;
     private int tickCount = 0;
+    private SimulationWorld<T, ?> world;
+    private Thread loopThread;
 
-    public GameLoop(long tickDurationMs) {
+    public GameLoop(long tickDurationMs, int threadCount) {
         this.tickDurationMs = tickDurationMs;
-        this.taskExecutor = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors());
+        this.taskExecutor = (threadCount > 0)
+                ? Executors.newFixedThreadPool(threadCount)
+                : Executors.newVirtualThreadPerTaskExecutor();
     }
 
-    public void addRecurringTask(Runnable task) {
-        recurringTasks.add(task);
+    public void setWorld(SimulationWorld<T, ?> world) {
+        this.world = world;
+    }
+
+    public void addRecurringTask(Tickable task) {
+        if (task instanceof ScheduledTask st) {
+            pendingTasks.add(st);
+        } else {
+            pendingTasks.add(new ScheduledTask() {
+                @Override
+                public Phase phase() {
+                    return Phase.SIMULATION;
+                }
+
+                @Override
+                public int priority() {
+                    return 50;
+                }
+
+                @Override
+                public ExecutionMode executionMode() {
+                    return ExecutionMode.SEQUENTIAL;
+                }
+
+                @Override
+                public void tick(int tickCount) {
+                    task.tick(tickCount);
+                }
+            });
+        }
+    }
+
+    public void addRecurringTask(Runnable runnable) {
+        addRecurringTask((Tickable) tc -> runnable.run());
     }
 
     public void start() {
@@ -29,7 +83,8 @@ public class GameLoop {
             return;
         }
         running = true;
-        new Thread(this::run).start();
+        loopThread = new Thread(this::run);
+        loopThread.start();
     }
 
     public void stop() {
@@ -37,7 +92,15 @@ public class GameLoop {
             return;
         }
         running = false;
-        taskExecutor.shutdown();
+        if (loopThread != null) {
+            loopThread.interrupt();
+            try {
+                loopThread.join(2000);
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+            }
+        }
+        taskExecutor.shutdownNow();
     }
 
     public boolean isRunning() {
@@ -49,24 +112,134 @@ public class GameLoop {
     }
 
     public void runTick() {
-        for (Runnable task : recurringTasks) {
-            if (!running) {
-                break;
-            }
+        tickCount++;
+        
+        // Drain pending tasks into the main list
+        ScheduledTask pending;
+        while ((pending = pendingTasks.poll()) != null) {
+            recurringTasks.add(pending);
+        }
+
+        if (world != null) {
             try {
-                task.run();
+                world.tick(tickCount);
             } catch (Exception e) {
-                System.err.println("Ошибка во время такта симуляции: " + e.getMessage());
-                e.printStackTrace();
+                log.error("Error during world tick: {}", e.getMessage(), e);
             }
         }
-        tickCount++;
+
+        // Reuse a fixed structure for phases to reduce allocations
+        Map<Phase, List<ScheduledTask>> phasedTasks = new EnumMap<>(Phase.class);
+        for (Phase phase : Phase.values()) {
+            phasedTasks.put(phase, new ArrayList<>());
+        }
+
+        for (ScheduledTask task : recurringTasks) {
+            phasedTasks.get(task.phase()).add(task);
+        }
+
+        for (Phase phase : Phase.values()) {
+            List<ScheduledTask> tasks = phasedTasks.get(phase);
+            if (tasks.isEmpty()) {
+                continue;
+            }
+
+            // Sort descending by priority (higher priority executes first)
+            tasks.sort(Comparator.comparingInt(ScheduledTask::priority).reversed());
+
+            List<CellService<T, SimulationNode<T>>> parallelGroup = new ArrayList<>();
+            for (ScheduledTask task : tasks) {
+                if (task.executionMode() == ExecutionMode.PARALLEL && task instanceof CellService) {
+                    @SuppressWarnings("unchecked")
+                    CellService<T, SimulationNode<T>> cellService = (CellService<T, SimulationNode<T>>) task;
+                    parallelGroup.add(cellService);
+                } else {
+                    if (!parallelGroup.isEmpty()) {
+                        runCellServicesParallel(parallelGroup);
+                        parallelGroup.clear();
+                    }
+                    try {
+                        task.tick(tickCount);
+                    } catch (Exception e) {
+                        log.error("Error during simulation tick in phase {}: {}", phase, e.getMessage(), e);
+                    }
+                }
+            }
+            
+            if (!parallelGroup.isEmpty()) {
+                runCellServicesParallel(parallelGroup);
+                parallelGroup.clear();
+            }
+        }
+    }
+
+    private void runCellServicesParallel(List<CellService<T, SimulationNode<T>>> services) {
+        if (world == null || taskExecutor.isShutdown()) {
+            return;
+        }
+
+        for (CellService<T, SimulationNode<T>> service : services) {
+            try {
+                service.beforeTick(tickCount);
+            } catch (Exception e) {
+                log.error("Error in beforeTick for service {}: {}", service.getClass().getSimpleName(), e.getMessage(), e);
+            }
+        }
+
+        Collection<? extends Collection<? extends SimulationNode<T>>> workUnits = world.getParallelWorkUnits();
+        List<Callable<Void>> tasks = new ArrayList<>();
+
+        for (Collection<? extends SimulationNode<T>> unit : workUnits) {
+            tasks.add(() -> {
+                for (SimulationNode<T> node : unit) {
+                    for (CellService<T, SimulationNode<T>> service : services) {
+                        try {
+                            service.processCell(node, tickCount);
+                        } catch (Exception e) {
+                            log.error("Error processing cell {} in service {}: {}", 
+                                    node.getCoordinates(), service.getClass().getSimpleName(), e.getMessage(), e);
+                        }
+                    }
+                }
+                return null;
+            });
+        }
+
+        try {
+            List<Future<Void>> futures = taskExecutor.invokeAll(tasks);
+            for (Future<Void> future : futures) {
+                try {
+                    future.get();
+                } catch (ExecutionException e) {
+                    log.error("Critical error in parallel cell service execution: {}", e.getCause().getMessage(), e.getCause());
+                    // In a production engine, we might want to trigger a simulation stop or rollback here
+                }
+            }
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+        } catch (RejectedExecutionException e) {
+            // Ignore if shutting down
+        }
+
+        for (CellService<T, SimulationNode<T>> service : services) {
+            try {
+                service.afterTick(tickCount);
+            } catch (Exception e) {
+                log.error("Error in afterTick for service {}: {}", service.getClass().getSimpleName(), e.getMessage(), e);
+            }
+        }
     }
 
     private void run() {
         while (running) {
             long startTime = System.currentTimeMillis();
-            runTick();
+            try {
+                runTick();
+            } catch (Throwable t) {
+                log.error("CRITICAL ERROR: Simulation loop crashed: {}", t.getMessage(), t);
+                // We might want to stop the simulation if a critical error occurs repeatedly
+                // but for now, we just log and continue to next tick if possible.
+            }
             long elapsed = System.currentTimeMillis() - startTime;
             long sleepTime = tickDurationMs - elapsed;
             if (sleepTime > 0) {
